src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_add_color3.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.add(&Color3::new(1.0, 0.5, 0.2).into())"
---
Color3:
  - 11
  - 10.5
  - 10.2
