src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_add_udim.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.add(&UDim::new(5.0, 32).into())"
---
UDim:
  - 15
  - 32
