src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_div_color3.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.div(&Color3::new(1.0, 0.5, 0.2).into())"
---
Color3:
  - 10
  - 20
  - 50
