src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_div_rect.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.div(&Rect::new(Vector2::new(5.0, 10.0),\nVector2::new(15.0, 20.0)).into())"
---
Rect:
  - - 2
    - 1
  - - 0.6666667
    - 0.5
