src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_div_udim.snap
---
source: src/math_ops/float32.rs
expression: "10.0f32.div(&UDim::new(5.0, 32).into())"
---
UDim:
  - 2
  - 0
